# whitebit-mcp

./: .dockerignore  .env.example  .gitignore  .mcp.json.example  CONTRIBUTING.md  Dockerfile  QUICKSTART.md  README.md  SECURITY.md  aliases.py  docker-compose.yml  pyproject.toml  requirements.txt  server.py  setup_mcp.py  skills_loader.py
skills/: LICENSE  README.md
skills/whitebit-algo-orders/: SKILL.md
skills/whitebit-dca-bot/: SKILL.md
skills/whitebit-earn/: SKILL.md
skills/whitebit-healthcheck/: SKILL.md
skills/whitebit-market-data/: SKILL.md
skills/whitebit-order-execution/: SKILL.md
skills/whitebit-portfolio/: SKILL.md
skills/whitebit-sentiment/: SKILL.md
skills/whitebit-smart-money/: SKILL.md
skills/whitebit-technical-analysis/: SKILL.md
skills/whitebit-trade-review/: SKILL.md
skills/whitebit-user-support/: SKILL.md
