[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whitebit-mcp"
version = "2.0.4"
description = "MCP server that exposes the WhiteBIT exchange API as AI tools"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "whitebit-python-sdk>=1.1.6",
    "mcp[cli]>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.0.0",
]

[project.scripts]
whitebit-mcp       = "server:main"
whitebit-mcp-setup = "setup_mcp:main"

[tool.hatch.build.targets.wheel]
include = ["server.py", "setup_mcp.py", "aliases.py", "skills_loader.py"]
# Skills live in the whitebit-mcp-skills submodule; force-include them so the
# wheel (and uvx/PyPI installs) ship the SKILL.md files, not just the Docker build.
force-include = { "skills" = "skills" }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
